--- a/StyleCSS/select-Frame.css
+++ b/StyleCSS/select-Frame.css
@@ -80,7 +80,7 @@ body {
     margin-top: 20px;
 }
 
-/* Style nút bấm từ Uiverse (Đã tinh chỉnh) */
+
 .filter-buttons {
     cursor: pointer;
     border: 4px solid black;
@@ -100,17 +100,15 @@ body {
 }
 
 .filter-btn span {
-    font-family:
-        "Be Vietnam Pro",
-        "Montserrat",
-        "SVN-Avo",
-        sans-serif;
-
-    font-size: 1.2rem;
-    font-weight: 700;
-    letter-spacing: 1.7px;
-    text-transform: uppercase;
-    color: #111;   /* Giữ chữ không bị xuống dòng */
+  color: #222020;
+  cursor: pointer;
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+    Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif,
+    Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  font-size: 100%;
+  font-weight: 900;
+  line-height: 1.5;
+  text-transform: uppercase;   /* Giữ chữ không bị xuống dòng */
 }
 
 /* Hiệu ứng nhấn nút (Lún xuống) */
@@ -155,7 +153,7 @@ body {
     /* Thay đổi cách tính width để phù hợp với tỉ lệ khung 295x900 của bạn */
     width: auto;
     max-width: 100%;
-    height: 70vh !important; /* Ưu tiên chiều cao để giữ tỉ lệ khung dọc */
+    height: 60vh !important; /* Ưu tiên chiều cao để giữ tỉ lệ khung dọc */
     max-height: 500px; 
     object-fit: contain;
     border-radius: 10px;
@@ -227,13 +225,24 @@ body {
         height: 35px !important;
     }
     .menu-group {
-        gap: 10px;          /* Thu hẹp khoảng cách trên màn hình nhỏ */
-        padding: 0 15px;
+        gap: 20px;          /* Thu hẹp khoảng cách trên màn hình nhỏ */
+        padding: 0 20px;
     }
     .filter-btn {
-        padding: 8px 5px;
+        padding: 8px 10px;
     }
     .filter-btn span {
-        font-size: 0.5rem;  /* Giảm font chữ một chút để vừa chiều ngang */
+        font-size: 1rem;  /* Giảm font chữ một chút để vừa chiều ngang */
     }
+    .frame {
+    /* Thay đổi cách tính width để phù hợp với tỉ lệ khung 295x900 của bạn */
+    width: auto;
+    max-width: 100%;
+    height: 40vh !important; /* Ưu tiên chiều cao để giữ tỉ lệ khung dọc */
+    max-height: 300px; 
+    object-fit: contain;
+    border-radius: 10px;
+    cursor: pointer;
+    
+}
 }
